User crud done, added sql seed data command for user table

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Java Bank</title>
-  </head>
-  <body>
-    <main>
-      <h1>Yes its working</h1>
-    </main>
-  </body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Java Bank</title>
+    </head>
+    <body>
+        <main>
+            <h1>Welcome to SquidBank</h1>
+            <p>Where the ocean does its banking</p>
+        </main>
+    </body>
 </html>
